[package]
name = "jerzy-psx"
authors = ["Jerzy Wilczek <jerzykwilczek@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A PSX emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
