[package]
name = "jerzy_psx"
authors = ["Jerzy Wilczek <jerzykwilczek@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A PSX emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.68", features = ["backtrace"] }
clap = { version = "4.0.32", features = ["derive"] }

[features]
default = []
cpu-debug = []
dma-debug = []
